--- a/scss/_custom.scss
+++ b/scss/_custom.scss
@@ -3,10 +3,10 @@
 
 // Include any default variable overrides here (though functions won't be available)*/
 
-    $primary: #906427;
-    $secondary: #B6AC97;
-    $dark: #392C1E;
-    $black: #292222;
+    $primary: #108F34;
+    $secondary: #1ED37C;
+    $dark: #021F13;
+    $black: #011607;
     $font-family-sans-serif: "Montserrat", sans-serif !default; 
     $font-family-serif:"Hind Madurai", serif !default;
 
