--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,6 +52,10 @@ p{
     }
 }
 
+.text-justify{
+        text-align: justify;
+}
+
   //Paramètrage des images
     img{
         object-fit: contain;
