--- a/scss/main.css
+++ b/scss/main.css
@@ -12031,26 +12031,33 @@ img {
 
 .image-card {
   position: relative;
-  right: -340px;
+  right: -300px;
   height: 250px;
-  width: 250px;
+  width: 300px;
+  border-spacing: 35px;
 }
 
-.form-label {
-  color: #108F34;
-}
-
-.allreservations a {
-  display: block;
-  color: #011607;
-  padding: 10px;
+.image-cardservice {
+  position: relative;
+  right: -100px;
+  height: 80px;
+  width: 80px;
+  border-spacing: 5px;
 }
 
 input[type=text], input[type=password], input[type=email] {
-  width: 50%;
+  width: 100%;
   padding: 12px 20px;
   margin: 8px;
   display: inline-block;
   border: 1px solid #ccc;
   box-sizing: border-box;
+}
+
+inputcom[type=text] {
+  width: 100%;
+}
+
+.form-label {
+  color: #108F34;
 }/*# sourceMappingURL=main.css.map */
