--- a/scss/main.scss
+++ b/scss/main.scss
@@ -65,29 +65,34 @@ p{
 
     .image-card{
         position:relative;
-        right: -340px;
+        right: -300px;
         height: 250px;
-        width:250px;
-    }
+        width:300px;
+        border-spacing:35px;
+    }   
 
-    .form-label{
-        color: $primary;
-    }
-
-    .allreservations{
-    a{
-        display: block;
-        color: $black;
-        padding:10px;
-    }
-}   
+    .image-cardservice{
+        position:relative;
+        right: -100px;
+        height: 80px;
+        width:80px;
+        border-spacing:5px;
+    }   
 
    // Position inputs page Connexion
 input[type=text], input[type=password], input[type=email] {
-    width: 50%;
+    width: 100%;
     padding: 12px 20px;
     margin: 8px;
     display: inline-block;
     border: 1px solid #ccc;
     box-sizing: border-box;
+}
+
+//inputcom[type=text] {
+    width: 100%;
+}
+
+.form-label{
+    color: $primary;
 }
