corection police Madurai

--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,5 @@
 @charset "UTF-8";
-@import url("/nodes_modules/bootstrap/bootstrap-icons-1.11.3/fonts/bootstrap-icons.css");
+@import url("/css/bootstrap-icons.css");
 /* Custom.scss
 // Option A: Include all of Bootstrap
 
